<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/vs"
        android:layout_width="266dp"
        android:layout_height="79dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/vs"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/degrees" />

    <TextView
        android:id="@+id/ftm2"
        android:layout_width="88dp"
        android:layout_height="51dp"
        android:layout_marginTop="32dp"
        android:text="@string/ftm"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintStart_toEndOf="@+id/vs"
        app:layout_constraintTop_toBottomOf="@+id/deg" />

    <EditText
        android:id="@+id/degrees"
        android:layout_width="266dp"
        android:layout_height="79dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:autofillHints="tttt"
        android:ems="10"
        android:hint="@string/degrees"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gspeed" />

    <TextView
        android:id="@+id/deg"
        android:layout_width="88dp"
        android:layout_height="51dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="36dp"
        android:text="@string/deg"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toEndOf="@+id/degrees"
        app:layout_constraintTop_toBottomOf="@+id/knot" />

    <EditText
        android:id="@+id/gspeed"
        android:layout_width="266dp"
        android:layout_height="89dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/gspeed"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/extimatedft" />

    <TextView
        android:id="@+id/knot"
        android:layout_width="88dp"
        android:layout_height="51dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="48dp"
        android:text="@string/knot"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toEndOf="@+id/gspeed"
        app:layout_constraintTop_toBottomOf="@+id/ft" />

    <EditText
        android:id="@+id/presentft"
        android:layout_width="266dp"
        android:layout_height="81dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="80dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/presentft"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/extimatedft"
        android:layout_width="265dp"
        android:layout_height="91dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/estimatedft"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/presentft" />

    <TextView
        android:id="@+id/ft"
        android:layout_width="88dp"
        android:layout_height="51dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="44dp"
        android:text="@string/ft"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toEndOf="@+id/extimatedft"
        app:layout_constraintTop_toBottomOf="@+id/ftm" />

    <TextView
        android:id="@+id/ftm"
        android:layout_width="88dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:text="@string/ftn"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/presentft"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/degftmtog"
        android:layout_width="159dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/degftmtoggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vs" />

    <Button
        android:id="@+id/exec"
        android:layout_width="174dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:text="@string/exec"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.814"
        app:layout_constraintStart_toEndOf="@+id/degftmtog"
        app:layout_constraintTop_toBottomOf="@+id/ftm2" />

    <TextView
        android:id="@+id/resultnm"
        android:layout_width="205dp"
        android:layout_height="113dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/resultnm"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/resultvs"
        android:layout_width="157dp"
        android:layout_height="111dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="24dp"
        android:text="@string/resultvs"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/resultnm" />

</androidx.constraintlayout.widget.ConstraintLayout>